<resources>
    <string name="app_name">UI Practice 1</string>
    <string name="error_msg_no_biometric_hardware">No biometric features available on this device.</string>
    <string name="error_msg_biometric_hw_unavailable">Biometric features are currently unavailable.</string>
    <string name="error_msg_biometric_not_setup">The user hasn\'t associated any biometric credentials with their account.</string>
    <string name="error_msg_auth_error">Authentication error.</string>
    <string name="error_msg_auth_failed">Authentication failed.</string>
    <string name="error_msg_login_failed">Username or password is incorrect.</string>
    <string name="sharedPref_username">username</string>
    <string name="sharedPref_password">password</string>
    <string name="sharedPref_activeFA">activeFA</string>
    <string name="text_login_button">Login</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_forget">Forgot your password?</string>
    <string name="text_signup">Sign up</string>
    <string name="text_not_account">Don\'t have account?</string>
</resources>
