<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.example.uipractice1.screens.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@drawable/background1"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout2"
            android:layout_width="271dp"
            android:layout_height="283dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="@dimen/barWidth"
                android:layout_height="@dimen/barHeight"
                android:layout_marginTop="6dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/roboto"
                android:text="@string/text_login_button"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgetText" />

            <EditText
                android:id="@+id/nameEdit"
                style="@style/editStyle"
                android:layout_width="@dimen/barWidth"
                android:layout_height="@dimen/barHeight"
                android:layout_marginBottom="12dp"
                android:autofillHints=""
                app:layout_constraintBottom_toTopOf="@+id/passText"
                app:layout_constraintStart_toStartOf="@+id/passText" />

            <TextView
                android:id="@+id/nameText"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:labelFor="@+id/nameEdit"
                android:text="@string/text_username"
                app:layout_constraintBottom_toTopOf="@+id/nameEdit"
                app:layout_constraintStart_toStartOf="@+id/nameEdit" />

            <TextView
                android:id="@+id/passText"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:labelFor="@id/passEdit"
                android:text="@string/text_password"
                app:layout_constraintBottom_toTopOf="@+id/passEdit"
                app:layout_constraintStart_toStartOf="@+id/passEdit" />

            <EditText
                android:id="@+id/passEdit"
                style="@style/editStyle"
                android:layout_width="@dimen/barWidth"
                android:layout_height="@dimen/barHeight"
                android:layout_marginTop="150dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/text_login_button"
                android:textColor="#3c3c3b"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/nameText"
                app:layout_constraintStart_toStartOf="@+id/nameText" />

            <TextView
                android:id="@+id/forgetText"
                style="@style/textQMStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/text_forget"
                android:textColor="#5285e9"
                app:layout_constraintStart_toStartOf="@+id/passEdit"
                app:layout_constraintTop_toBottomOf="@+id/passEdit" />

            <TextView
                android:id="@+id/signUpText"
                style="@style/textQMStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/text_signup"
                android:textColor="#fe9fb5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/notAccountText"
                app:layout_constraintTop_toBottomOf="@+id/loginButton" />

            <TextView
                android:id="@+id/notAccountText"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/signUpText"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>